自己紹介文の作成

--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 <body>
 <div class="container">
     <header>
-        <img class="avatar" src="assets/images/avatar.png" alt="アバター">
-        <h1>Mooc Peakers</h1>
+        <img class="avatar" src="assets/images/naoki.jpg" alt="アバター">
+        <h1>丸山 直樹</h1>
     </header>
     <div class="content">
         <div class="pr">
-            <p>大学で機械学習を勉強しています。</p>
-            <p>最近Peakersのハッカソンで知り合った人に誘われて競技プログラミングはじめました。</p>
-            <p>来月、都内で勉強会を計画しているので、興味がある人はメッセージをください。</p>
+            <p>WEBエンジニア歴7年目で、株式会社01-technologiesでCTOをしています。</p>
+            <p>趣味はゲームとスノボーです。</p>
+            <p>
+                みんなで楽しくプログラミングを学んでいきましょう！
+                <br>
+                困ったらなんでも質問してください！
+            </p>
         </div>
         <ul class="contacts">
             <li class="twitter">
